Fixes contrast of broken news links #1244
Updated ocamlog.css  in order to fix the contrast of broken news link. Solves #1244

--- a/site/css/ocamlorg.css
+++ b/site/css/ocamlorg.css
@@ -222,7 +222,6 @@ div.subscribers {
 }
 
 .subscribers .broken {
-  color: #dcc8c4;
   text-decoration: line-through;
 }
 
